--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 
 <body>
     <div class="container">
-        <div id="ad"><h1></h1></div>
+        <div id="ad">
+            <h1></h1>
+        </div>
         <div class="search-area">
             <input type="text" name="" id="username" placeholder="Enter Github Username" autocomplete="off">
             <button onclick="getDetails();">Get Details</button>
@@ -29,28 +31,39 @@
                 <p id="bio"></p>
             </div>
             <div class="info">
-                <ul>
-                    <li id="followers"></li>
-                    <li id="following"></li>
-                </ul>
+
+                <p id="followers"></p>
+                <p id="following"></p>
+
             </div>
         </div>
     </div>
 
-    <!-- Optional JavaScript; choose one of the two! -->
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
+
+    <!-- footer -->
+    <footer>
+        <div class="rounded-social-buttons">
+            <a class="social-button github" href="https://github.com/shagariboy/" target="_blank" aria-label="Github"><i
+                    class="fab fa-github"></i></a>
+            <a class="social-button linkedin" href="https://linkedin.com/in/nnamdi-ezeh-2658031ba" target="_blank"
+                aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+            <a class="social-button mail" href="mailto:nnamdiezeh0@gmail.com" target="_blank" aria-label="Gmail"><i
+                    class="fas fa-envelope"></i></a>
+        </div>
+    </footer>
+
+    <!-- script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
-        <script src="/script/script.js"></script>
-        <script src="/script/adviceApi.js"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js"
+        integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe"
+        crossorigin="anonymous"></script>
+    <script src="/script/script.js"></script>
+    <script src="/script/adviceApi.js"></script>
 
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    -->
+
 </body>
 
 </html>
