--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <meta name="description" content="A simple web application utilizing the Github API that displays searched github users profile. I used fetch API to randomly display quotes from Advice Slip API">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="preconnect" href="https://api.adviceslip.com/">
+    <link rel="preconnect" href="https://fonts.googleapis.com/">
+    
     <title>Github Profile API</title>
 </head>
 
